# rust-tinypng-clone

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-releases.sh  checksums.txt
assets/: index.html
pm/: v0.1.1-release-notes.md
releases/: rust_tinypng_clone-macos-arm64.sha256  rust_tinypng_clone-macos-arm64.sha256.sha256  rust_tinypng_clone-macos-x64.sha256  rust_tinypng_clone-macos-x64.sha256.sha256  rust_tinypng_clone-windows-x64.exe.sha256  rust_tinypng_clone-windows-x64.exe.sha256.sha256
src/: main.rs
